# advent-of-code-2023

./: Cargo.toml
day-1/: Cargo.toml
day-1/benches/: benchmark.rs
day-1/src/: part1.rs  part2.rs
day-2/: Cargo.toml
day-2/benches/: benchmark.rs
day-2/src/: common.rs  lib.rs  part1.rs  part2.rs
day-3/: Cargo.toml
day-3/benches/: benchmark.rs
day-3/src/: part1.rs  part2.rs
day-4/: Cargo.toml
day-4/benches/: benchmark.rs
day-4/src/: common.rs  lib.rs  part1.rs  part2.rs
