[package]
name = "day-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion.workspace = true
rstest.workspace = true

[[bench]]
name = "day-4"
path = "benches/benchmark.rs"
harness = false
